[tool.poetry]
name = "project-virginia"
version = "0.1.0"
description = "Poetry for PythonWeekend Project Virginia"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
iso4217 = "^1.6.20180829"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
